# haskell-talk-all-staff-spring2018

./: LICENSE  README.md  haskell-talk-all-staff-spring2018.cabal
reveal.js/: '  haskell-for-clojure-programmers.md  index.html  notes.md  package-lock.json
reveal.js/css/: haskell-talk.css
src/: BasicTypes.hs  Laziness.hs  Main.hs  TypeClasses.hs
